--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body class="align-middle flex flex-col font-sans h-full items-center justify-center p-6 text-lg">
-    <include src="components/header.html"></include>
-    <include src="components/me-you.html"></include>
+    <include src="components/standard-html.html"></include>
+    <include src="components/alpine-fetch.html"></include>
+    <include src="components/alpine-toggle.html"></include>
+    <include src="components/web-component-banner.html"></include>
     <script src='app.js'></script>
 </body>
 
