--- a/src/index.html
+++ b/src/index.html
@@ -9,11 +9,14 @@
     <link rel='stylesheet' type='text/css' media='screen' href='styles/app.css'>
 </head>
 
-<body class="align-middle flex flex-col font-sans h-full items-center justify-center p-6 text-lg">
+<body class="container flex flex-col font-sans h-full items-center justify-center mx-auto p-6 text-lg">
     <include src="components/standard-html.html"></include>
-    <include src="components/alpine-fetch.html"></include>
-    <include src="components/alpine-toggle.html"></include>
-    <include src="components/web-component-banner.html"></include>
+    <hr class="border-t-2 my-4 w-full">
+    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+        <include src="components/alpine-fetch.html"></include>
+        <include src="components/alpine-toggle.html"></include>
+        <include src="components/web-component-banner.html"></include>
+    </div>
     <script src='app.js'></script>
 </body>
 
