use tailwind built-in css purge

--- a/src/index.html
+++ b/src/index.html
@@ -2,22 +2,22 @@
 <html class="h-full">
 
 <head>
-    <title>Alpine Parcel Tailwind</title>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='styles/app.css'>
+  <title>Alpine Parcel Tailwind</title>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='styles/_all.css'>
 </head>
 
 <body class="container flex flex-col font-sans h-full items-center justify-center mx-auto p-6 text-lg">
-    <include src="components/standard-html.html"></include>
-    <hr class="border-t-2 my-4 w-full">
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
-        <include src="components/alpine-fetch.html"></include>
-        <include src="components/alpine-toggle.html"></include>
-        <include src="components/web-component-banner.html"></include>
-    </div>
-    <script src='app.js'></script>
+  <include src="components/standard-html.html"></include>
+  <hr class="border-t-2 my-4 w-full">
+  <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+    <include src="components/alpine-fetch.html"></include>
+    <include src="components/alpine-toggle.html"></include>
+    <include src="components/web-component-banner.html"></include>
+  </div>
+  <script src='app.js'></script>
 </body>
 
 </html>
